--- a/src/js_chat/index.html
+++ b/src/js_chat/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>AngularFire Chat Demo</title>
   <link rel="stylesheet" type="text/css" href="https://www.firebase.com/css/example.css">
-  <script src="../todomvc/components/angular/angular.js"></script>
+  <script src="../../components/angular/angular.js"></script>
 </head>
 <body ng-controller="Chat">
   <div>
@@ -21,7 +21,7 @@
     <input type="submit" id="submit" value="Send" style="font-size:24px;">
   </form>
   <script src="https://cdn.firebase.com/v0/firebase.js"></script>
-  <script src="../../angularfire.min.js"></script>
+  <script src="angularfire.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
