--- a/src/firebaseplonedemo/firebaseplonedemo/static/index.html
+++ b/src/firebaseplonedemo/firebaseplonedemo/static/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>AngularFire Chat Demo</title>
   <link rel="stylesheet" type="text/css" href="https://www.firebase.com/css/example.css">
-  <script src="../../components/angular/angular.js"></script>
+  <script src="../../../../components/angular/angular.js"></script>
 </head>
 <body ng-controller="Chat">
   <div>
